# nccl

./: .gitignore
src/: bootstrap.cc  init.cc
src/collectives/: all_reduce.cc
src/collectives/device/: all_reduce.h  mlcc_comm.h
src/include/: mlcc.h  socket.h
src/transport/: net.cc  net_socket.cc
test/: pytorch_mnist.py  pytorch_synthetic.py  rebuild_hvd.sh  rebuild_hvd_shd.sh  rebuild_nccl.sh  run_mnist.sh  run_resnet50.sh  trace_log
test/log/: temp  trace_log
test/nccl-perf/: Makefile  all_reduce  all_reduce.cu
test/nccl-prog/: CMakeLists.txt
test/nccl-prog/cmake/: FindNCCL.cmake
test/nccl-prog/examples/: CMakeLists.txt  all_reduce.cc
